<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item android:title="@string/menu_tp1">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_tp1"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_tp1_act1" />
                <item
                    android:id="@+id/nav_tp1_act2"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_tp1_act2" />
                <item
                    android:id="@+id/nav_tp1_act3"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_tp1_act3" />
            </group>
        </menu>
    </item>

    <item android:title="@string/menu_tp2">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_tp2"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_tp1_act1" />
              </group>
        </menu>
    </item>
    <item android:title="@string/menu_tp4">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_tp4_act1"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_tp1_act1" />
                <item
                    android:id="@+id/nav_tp4_act2"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_tp1_act2" />
            </group>
        </menu>
    </item>
    <item android:title="@string/menu_tp5">
    <menu>
        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_tp5"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_tp1_act1" />
        </group>
    </menu>
    </item>

    <item android:title="@string/menu_tp7">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_tp7"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_tp7" />
            </group>
        </menu>
    </item>




</menu>
